Added background.js and created a number of examples of Chrome Dev flow

--- a/extension/devtools/devtools-page.html
+++ b/extension/devtools/devtools-page.html
@@ -6,8 +6,9 @@
   <title>Test Title</title>
 </head>
 <body>
-  <!-- This file is used in manifest.json -->
-  <!-- Loads script devtools.js -->
+  <!-- This file is references from manifest.json -->
+  <!-- Loads script devtools.js where the panel is actually created-->
+  <!-- ***** This HTML is not used - see panel.html instead! **** -->
   <script src="./devtools.js"></script>
 </body>
 </html>
