--- a/extension/devtools/panel/panel.html
+++ b/extension/devtools/panel/panel.html
@@ -6,7 +6,7 @@
   <title>Test Titleeeeee</title>
 </head>
 <body>
-  <h1 id="title-panel">Does this work - yes</h1>
+  <h1 id="title-panel">IT'S FACKIN' WORKING!</h1>
   <button id="alert-button">Click to send an alert via background.js</button>
   <button id="color-button">Click to change color directly</button>
 
