--- a/extension/devtools/panel/panel.html
+++ b/extension/devtools/panel/panel.html
@@ -12,7 +12,7 @@
 
     <!-- Left panel containing the SVG Tree diagram -->
     <div id="left-panel">
-      <svg width="1000" height="2000" id="tree">
+      <svg width="100%" height="2000" id="tree">
         <g transform="translate(20, 20)" id="treeG" >
           <g class="links"></g>
           <g class="nodes"></g>
