Tidied up the layout

--- a/extension/devtools/panel/panel.html
+++ b/extension/devtools/panel/panel.html
@@ -31,9 +31,11 @@
           </button>
           <button id="color-button">Click to change color directly</button>
         </div>
+        <div id="info-panel">
+        </div>
       </div>
-    </div>
 
+    </div>
     <script src="bundle.js"></script>
   </body>
 </html>
