--- a/extension/devtools/panel/panel.html
+++ b/extension/devtools/panel/panel.html
@@ -1,37 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Test Titleeeeee</title>
-    <link rel="stylesheet" href="styles.css" />
-  </head>
-  <body>
-    <!-- Main window of Panel.html -->
-    <div id="main-container">
-      <!-- Left panel containing the SVG Tree diagram -->
-      <div id="left-panel">
-        <svg width="1000" height="2000" id="tree">
-          <g transform="translate(20, 20)" id="treeG">
-            <g class="links"></g>
-            <g class="nodes"></g>
-          </g>
-        </svg>
-      </div>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Test Titleeeeee</title>
+</head>
+<body>
+  <h1 id="title-panel">IT'S FACKIN' WORKING!</h1>
+  <button id="alert-button">Click to send an alert via background.js</button>
+  <button id="color-button">Click to change color directly</button>
 
-      <!-- Right panel containing additional information on components etc -->
-      <div id="right-panel">
-        <div id="buttons">
-          <h1 id="title-panel">Hello</h1>
-          <button id="center-tree">Click to center tree</button>
-          <button id="alert-button">
-            Click to send an alert via background.js
-          </button>
-          <button id="color-button">Click to change color directly</button>
-        </div>
-      </div>
-    </div>
+  <!-- TEST AREA FOR THE TREE -->
+  <svg width="400" height="220">
+    <g transform="translate(5, 5)">
+      <g class="links"></g>
+      <g class="nodes"></g>
+    </g>
+  </svg>
 
-    <script src="bundle.js"></script>
-  </body>
+
+  <script src="bundle.js"></script>
+</body>
 </html>
