--- a/extension/devtools/panel/panel.html
+++ b/extension/devtools/panel/panel.html
@@ -20,8 +20,8 @@
         </g>
       </svg>
       <div class="button-bar">
-        <button id="center-tree">Center</button>
-        <button id="show-state">State</button>
+        <div id="center-tree">Center</div>
+        <div id="show-state">State</div>
       </div>
     </div>
 
