--- a/extension/devtools/panel/panel.html
+++ b/extension/devtools/panel/panel.html
@@ -13,8 +13,8 @@
 
     <!-- Left panel containing the SVG Tree diagram -->
     <div id="left-panel">
-      <svg width="100%" height="2000" id="tree">
-        <g transform="translate(20, 20)" id="treeG" >
+      <svg width="100%" height="100%" id="tree">
+        <g width="100%" height="100%" id="treeG" >
           <g class="links"></g>
           <g class="nodes"></g>
         </g>
