Added basic error handling. Removed function context from port

--- a/extension/devtools/panel/panel.html
+++ b/extension/devtools/panel/panel.html
@@ -23,6 +23,7 @@
         <div id="center-tree">Center</div>
         <div id="show-state">State</div>
       </div>
+      <div id="error-message"></div>
     </div>
     
     <!-- Right panel containing additional information on components etc -->
