--- a/extension/devtools/panel/panel.html
+++ b/extension/devtools/panel/panel.html
@@ -33,7 +33,7 @@
         <!-- input box to search for components -->
       </div>
 
-      <div id="info-title">Realize - State and Hierarchal Visualizer for React</div>
+      <div id="info-title">Realize - State and Hierarchical Visualizer for React</div>
       <div id="info-panel">
         
         
